fix wrap in folder structure

--- a/brainPop/Frontend/src/assets/styles/style_Desktop3.css
+++ b/brainPop/Frontend/src/assets/styles/style_Desktop3.css
@@ -140,8 +140,8 @@ body.left-aligned {
 }
 
 .items-container {
-
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     justify-content: flex-start;
     align-items: flex-start;
